--- a/newcppraycast/newcppraycast.vcxproj
+++ b/newcppraycast/newcppraycast.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="application.cpp" />
+    <ClCompile Include="force_powers.cpp" />
     <ClCompile Include="graphics.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="map.cpp" />
@@ -149,11 +150,13 @@
     <ClCompile Include="sprite.cpp" />
     <ClCompile Include="textures.cpp" />
     <ClCompile Include="upng.cpp" />
+    <ClCompile Include="Vec2.cpp" />
     <ClCompile Include="wall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="application.h" />
     <ClInclude Include="defs.h" />
+    <ClInclude Include="force_powers.h" />
     <ClInclude Include="graphics.h" />
     <ClInclude Include="map.h" />
     <ClInclude Include="physics.h" />
@@ -162,6 +165,7 @@
     <ClInclude Include="sprite.h" />
     <ClInclude Include="textures.h" />
     <ClInclude Include="upng.h" />
+    <ClInclude Include="Vec2.h" />
     <ClInclude Include="wall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
